# NLP_Projects

./: MODULE.bazel
base/: BUILD  json_utils.hpp
base/strings/: string_util.cc
bazel/: curl.BUILD  llama_cpp.BUILD  opencv.bazel  sentencepiece.bazel
bazel/dlib/: BUILD.patch
bazel/opencv_back/: MODULE.bazel.patch  MODULE.bazel.source
chinese_error_correction/macbert2csc/macbert2onnx/: README.md  check.py  macbert2onnx.py  macbert4csc.onnx
chinese_error_correction/macbert2csc/onnx-cpp/: README.md
chinese_error_correction/macbert2csc/onnx-cpp/model/: .mac_bert_error_correction.h.swp  BUILD  mac_bert_error_correction.cc  mac_bert_error_correction.h  mac_bert_error_correction_test.cc
chinese_error_correction/qwen2csc/: BUILD  llama_cpp.cc  qwen_test.cc
chinese_error_correction/t52csc/onnx-cpp/: README.md
chinese_error_correction/t52csc/onnx-cpp/model/: BUILD  t5_error_correction.cc  t5_error_correction.h  t5_error_correction_test.cc
chinese_error_correction/t52csc/t52onnx/: README.md
data/chinese_error_correction/macbert2csc/onnx-cpp/model/: config.json
data/chinese_error_correction/t52csc/onnx-cpp/model/: config.json  tokenizer.json  tokenizer_config.json
