###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "abseil-cpp", version = "20230802.0.bcr.1", repo_name = "com_google_absl")

bazel_dep(name = "darts-clone", version = "0.32")
bazel_dep(name = "nlohmann_json", version = "3.11.3.bcr.1")
bazel_dep(name = "gsl", version = "4.0.0")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "pybind11_protobuf", version = "0.0.0-20240524-1d7a729")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "re2", version = "2024-07-02", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "tink_cc", version = "2.3.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "boringssl", version = "0.20241024.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "oak",
    remote = "https://github.com/project-oak/oak.git",
    branch = "main",
)

git_repository(
    name = "io_grpc_grpc_java",
    remote = "https://github.com/grpc/grpc-java.git",
    tag = "v1.63.0",
)

git_repository(
    name = "pantor_inja",
    remote = "https://github.com/pantor/inja.git",
    tag = "v3.4.0",
    build_file = "//bazel:inja.BUILD",
)

http_archive(
  name = "curl",
  urls = ["https://curl.se/download/curl-8.4.0.tar.gz"],
  sha256 = "816e41809c043ff285e8c0f06a75a1fa250211bbfb2dc0a037eeef39f1a9e427",
  strip_prefix = "curl-8.4.0",
  build_file = "//bazel:curl.BUILD",
)

http_archive(
    name = "com_google_sentencepiece",
    build_file = "@//bazel:sentencepiece.bazel",
    patch_args = ["-p1"],
    patches = ["@//bazel:sentencepiece.patch"],
    sha256 = "8409b0126ebd62b256c685d5757150cf7fcb2b92a2f2b98efb3f38fc36719754",
    strip_prefix = "sentencepiece-0.1.96",
    urls = ["https://github.com/google/sentencepiece/archive/refs/tags/v0.1.96.zip"],
)

bazel_dep(name = "dlib", version = "19.24.6")
archive_override(
    module_name = "dlib",
    strip_prefix = "dlib-19.24.6",
    integrity = "sha256-IlE8NT7JwVMwDDlAUMlsqdCI4ClmrA9jnpieUDGMgtY=",
    patches = [
        "@//bazel/dlib:BUILD.patch",
        "@//bazel/dlib:MODULE.bazel.patch",
    ],
    urls = ["https://github.com/davisking/dlib/archive/refs/tags/v19.24.6.tar.gz"],
)
# http_archive(
#   name = "llama_cpp",
#   sha256 = "edd7ba04ffa779325bbdcd4c017f3e528d2de84fdd7b687749923342ea0db67a",
#   strip_prefix = "llama.cpp-b2223",
#   urls = ["https://github.com/ggerganov/llama.cpp/archive/refs/tags/b2223.tar.gz"],
#   patches = ["//bazel:llama_cpp.PATCH"],
#   patch_args = ["-p1"],
# )
